--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,6 +3,8 @@
 <head>
   <base href="/">
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Friend Finder</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
@@ -12,6 +14,9 @@
 
 </head>
 
+<body>
+  
+</body>
 <h1>This is my friend finder app!</h1>
 <a href="/survey"><button type="button" class="btn btn-lg btn-primary" id="start-survey">
   <span class="glyphicon glyphicon-pencil"></span>Start Survey!</button></a>
